# obsidian-karpathy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  RUNBOOK.md  TESTING.md
examples/: README.md
examples/demo-vault/Areas/: Learning Loop.md
examples/demo-vault/Projects/: Graph Explorer.md
scripts/: dev.sh  setup.sh
src/obsidian_karpathy/: __init__.py  cli.py  config.py  graph.py  llm.py  models.py  parser.py  web.py
src/obsidian_karpathy/demo_vault/Areas/: Writing.md
src/obsidian_karpathy/static/: app.js  index.html  styles.css
src/obsidian_knowledge_base/: __init__.py  cli.py  config.py  graph.py  llm.py  parser.py  web.py
src/obsidian_knowledge_base/demo_vault/: Home.md
src/obsidian_knowledge_base/demo_vault/Resources/: Embeddings.md  Spaced Repetition.md
src/obsidian_knowledge_base/static/: index.html
tests/: test_cli.py  test_config.py  test_graph.py  test_llm.py  test_parser.py  test_web.py
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
web/src/components/: Chat.tsx  Graph.tsx  Inspector.tsx  RightPanel.tsx  Settings.tsx  Sidebar.tsx
