[project]
name = "obsidian-karpathy"
version = "0.3.0"
description = "A Karpathy-inspired Obsidian knowledge graph explorer with a CLI and sleek web UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Misha Lubich", email = "misha@mishalubich.com" }
]
maintainers = [
  { name = "Misha Lubich", email = "misha@mishalubich.com" }
]
keywords = ["obsidian", "knowledge-graph", "markdown", "fastapi", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "fastapi>=0.115.0",
  "markdown-it-py>=3.0.0",
  "openai>=1.40.0",
  "pydantic-settings>=2.3.4",
  "rich>=13.7.0",
  "typer>=0.12.5",
  "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://mishalubich.com"
Repository = "https://github.com/ml-lubich/obsidian-karpathy"

[project.scripts]
okg = "obsidian_karpathy.cli:app"

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_karpathy"]

[tool.pytest.ini_options]
addopts = "--cov=obsidian_karpathy --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
